--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HTML5 Boilerplate: The web's most popular front-end template</title>
-        <meta name="description" content="HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites. Spend more time developing and less time reinventing the wheel.">
+        <meta name="description" content="HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites. Spend more time developing and less time reinventing the wheel. Just checking.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- ref:css /static/css/compiled.css -->
         <link rel="stylesheet" href="/static/css/main.css">
